fixed grid height and width to 100%, aligned iconButtons inside grid

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ input {
 }
 
 .simple-keyboard {
-  max-width: 850px;
+  max-width: 100%;
 }
 
 .simple-keyboard .enabled-keys {
